...

    var body: some View {
        VStack {
            Form {
                Section("Fields:") {
                    Group {
                        TextField("New name", text: $name.max(DataFieldsSizeLimit.name))
                            .font(.title3)
                            .focused($focusState, equals: .name)
                            .onSubmit { focusState = .details }
                        
                        TextField("New details", text: $details.max(DataFieldsSizeLimit.details), axis: .vertical)
                            .font(.headline.weight(.light))
...
        }
    }
}

#Preview {
    NavigationStack {
        UpdateBlueprintView(Blueprint("Groceries", details: "Try farmers market first"))
    }
}

